--- a/SW_zerotoall/aboutSW.html
+++ b/SW_zerotoall/aboutSW.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
+<script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
 <meta charset="utf-8">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+<!-- 부가적인 테마 -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+<!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<!-- bootstrap 강의 따라해보기중//04-07 -->
 
 <head>
     <title>
@@ -10,22 +20,42 @@
 </head>
 
 <body>
-    <h1>15학번 박상원</h1>
-    <img src="coding.jpg" alt="파일을 못불러왔엉" width="300px"><br>
-    <!-- 이미지 추후 수정 예정 -->
-    <p>말도 많고 탈도 많고 질문도 많은 15학번 박상원입니다. </p>
-    <p>1996년 11월 22일에 태어난 그는.................지금 코딩지옥에 빠져있다<br>
-    </p>
-    <p>남기실 말씀이 있으시면 밑의 방명록에 글을 남겨주세요!</p>
-    <form action="전송받을 대상?">
-        <select>
-            <option value="good">좋아요!</option>
-            <option value="loveit">최고에요!</option>
-            <option value="nice">멋져요!</option>
-        </select><br>
-        적을 내용:<br><textarea></textarea>
-        <input type="submit"></button>
-    </form>
+    <div class="container">
+        <h1>15학번 박상원</h1>
+        <img src="coding.jpg" alt="파일을 못불러왔엉" width="300px"><br>
+        <!-- 이미지 추후 수정 예정 -->
+        <p>말도 많고 탈도 많고 질문도 많은 15학번 박상원입니다. </p>
+        <p>1996년 11월 22일에 태어난 그는.................지금 코딩지옥에 빠져있다<br>
+        </p>
+        <p>남기실 말씀이 있으시면 밑의 방명록에 글을 남겨주세요!</p>
+        <form action="전송받을대상">
+            <select>
+                <option value="good">좋아요!</option>
+                <option value="loveit">최고에요!</option>
+                <option value="nice">멋져요!</option>
+            </select>
+            적을 내용:<br><textarea></textarea>
+            <div class="form-group">
+                <label for="exampleInputEmail1">이메일 주소</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="이메일을 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">암호</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="암호">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputFile">파일 업로드</label>
+                <input type="file" id="exampleInputFile">
+                <p class="help-block">여기에 블록레벨 도움말 예제</p>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> 입력을 기억합니다
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary">제출</button>
+        </form>
+    </div>
 </body>
 
 </html>
