--- a/SW_zerotoall/index.html
+++ b/SW_zerotoall/index.html
@@ -1,30 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
     <meta charset="utf-8">
-    <title>
-        SW
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SW</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- bootstrap 강의 따라해보기중//04-07 -->
 </head>
 
-<body>
-    <h1>누구에게나 처음은 있다! - 웹개발편</h1>
-    내가 띄울것들
-    <ol>
-        <li><a href="aboutSW.html" target="_blank">15학번 박상원</a></li>
-        <li><a href="IT_Service.html" target="_blank">IT서비스 소개</a></li>
-        <li><a href="Goal_April.html">19년 4월 목표!</a></li>
-    </ol>
+<body><nav>
+    <div class="container"><nav>
+        <ul class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="aboutSW.html">About</a></li>
+            <li role="presentation"><a href="IT_Service.html">Serivce</a></li>
+            <li role="presentation"><a href="Goal_April.html">Goals</a></li>
+        </ul>
+    </nav>
+        <h1>누구에게나 처음은 있다! - 웹개발편</h1>
+        
+        <h2>
+            이 페이지는 박상원의 멋사 진행 중 만들게 된 소개 페이지 입니다 ㅎㅎ
+        </h2>
+        <p>
+            2019년 4월 3일에 만들어졌으며 아직 html로만 구성된 페이지 입니다.<br>
+            추후 css나 bootstrap을 사용하여 더 나은 디자인으로 뵙겠습니다
 
-    <h2>
-        이 페이지는 박상원의 멋사 진행 중 만들게 된 소개 페이지 입니다 ㅎㅎ
-    </h2>
-    <p>
-        2019년 4월 3일에 만들어졌으며 아직 html로만 구성된 페이지 입니다.<br>
-        추후 css나 bootstrap을 사용하여 더 나은 디자인으로 뵙겠습니다
-    
-    </p>
+        </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+              <span class="sr-only">40% Complete (success)</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+              <span class="sr-only">20% Complete</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+              <span class="sr-only">60% Complete (warning)</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+              <span class="sr-only">80% Complete (danger)</span>
+            </div>
+          </div>
+
+    </div>
 </body>
 
 </html>
