--- a/SW_zerotoall/index.html
+++ b/SW_zerotoall/index.html
@@ -199,10 +199,10 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Services
+              Goals
             </h3>
             <p class="subtitle-a">
-              서비스 설명입니다.
+              목표입니다.
             </p>
             <div class="line-mf"></div>
           </div>
